// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputGroup renders 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-center w-full gap-2"
>
  <div
    className="sc-jiPWxV kPBiws"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-dZiGjT hmAxjq"
    >
      <div
        className="sc-iBBJcT bdOikL"
      >
        <input
          className="sc-RYuTI DNZoc"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-fHsjty cnpQxB"
        />
      </div>
    </div>
    <div
      className="sc-dZiGjT ezhKNO"
    >
      <div
        className="sc-iBBJcT bdOikL"
      >
        <input
          className="sc-RYuTI ldOhQs"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-fHsjty cnpQxB"
        />
      </div>
    </div>
  </div>
  <div
    className="sc-jiPWxV dMVQlb"
    dir="ltr"
    orientation="vertical"
  >
    <div
      className="sc-dZiGjT jaVzgm"
    >
      <div
        className="sc-iBBJcT bdOikL"
      >
        <input
          className="sc-RYuTI bZcTTw"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-fHsjty cnpQxB"
        />
      </div>
    </div>
    <div
      className="sc-dZiGjT WdiBy"
    >
      <div
        className="sc-iBBJcT bdOikL"
      >
        <input
          className="sc-RYuTI fCjXAY"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-fHsjty cnpQxB"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders RTL 1`] = `
<div
  className="sc-jiPWxV kPBiws"
  dir="rtl"
  orientation="horizontal"
>
  <div
    className="sc-dZiGjT ezhKNO"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI ldOhQs"
        dir="rtl"
        placeholder="Country"
        type="text"
      />
      <label
        className="sc-fHsjty RmHsK"
      />
    </div>
  </div>
  <div
    className="sc-dZiGjT hmAxjq"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI DNZoc"
        dir="rtl"
        placeholder="Phone"
        type="text"
      />
      <label
        className="sc-fHsjty RmHsK"
      />
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders and allows access to DOM and values for text field 1`] = `
<div
  className="flex flex-col justify-around items-center w-full gap-2"
>
  <div
    className="sc-jiPWxV kPBiws"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-dZiGjT hmAxjq"
    >
      <div
        className="sc-iBBJcT bdOikL"
      >
        <input
          className="sc-RYuTI DNZoc"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-fHsjty cnpQxB"
        />
      </div>
    </div>
    <div
      className="sc-dZiGjT ezhKNO"
    >
      <div
        className="sc-iBBJcT bdOikL"
      >
        <input
          className="sc-RYuTI ldOhQs"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-fHsjty cnpQxB"
        />
      </div>
    </div>
  </div>
  <span
    className="sc-gZnPbQ pbLGt"
    size="xsmall"
  >
    Country: 
    Estonia
  </span>
  <span
    className="sc-gZnPbQ pbLGt"
    size="xsmall"
  >
    Phone: 
    +372 45678901
  </span>
</div>
`;

exports[`TextInputGroup renders and allows event listeners for the select fields 1`] = `
<div
  className="flex flex-col justify-around items-center w-full gap-2"
>
  <div
    className="sc-eHKzgQ fkOcLC"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-cVrJL irLGgW"
    >
      <div
        className=" css-1tsy5a7-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-10-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-b5xmou-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-px9mr7-ValueContainer"
          >
            <div
              className="sc-kvtFaN hHsmvS"
            />
            <div
              className="sc-gPPVPr hmqyqw"
            >
              <div
                className=" css-1rtvqhl-placeholder"
                id="react-select-10-placeholder"
              >
                <div
                  className="sc-jsnFHz jlZMwM"
                >
                  Country
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-10-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-10-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-foGaCG"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bcgPVu kVpXlq"
    >
      <div
        className=" css-1tsy5a7-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-11-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-x13ut4-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-px9mr7-ValueContainer"
          >
            <div
              className="sc-kvtFaN hHsmvS"
            />
            <div
              className="sc-gPPVPr hmqyqw"
            >
              <div
                className=" css-1rtvqhl-placeholder"
                id="react-select-11-placeholder"
              >
                <div
                  className="sc-jsnFHz jlZMwM"
                >
                  Vehicle
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-11-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-11-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-foGaCG"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    className="sc-gZnPbQ pbLGt"
    size="xsmall"
  >
    Country: 
  </span>
  <span
    className="sc-gZnPbQ pbLGt"
    size="xsmall"
  >
    Vehicle: 
  </span>
</div>
`;

exports[`TextInputGroup renders different types 1`] = `
<div
  className="sc-jiPWxV kPBiws"
  dir="ltr"
  orientation="horizontal"
>
  <div
    className="sc-dZiGjT hmAxjq"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI DNZoc"
        dir="ltr"
        placeholder="Email"
        type="email"
      />
      <label
        className="sc-fHsjty cnpQxB"
      />
    </div>
  </div>
  <div
    className="sc-dZiGjT ezhKNO"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI igXBgw"
        dir="ltr"
        placeholder="Password"
        type="password"
      />
      <label
        className="sc-fHsjty cnpQxB"
      />
      <div
        className="sc-behkuB iCzORt"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders multi select 1`] = `
<div
  className="sc-eHKzgQ fkOcLC"
  dir="ltr"
  orientation="horizontal"
>
  <div
    className="sc-cVrJL irLGgW"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-4-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-b5xmou-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-13urifb-ValueContainer"
        >
          <div
            className="sc-kvtFaN hHsmvS"
          >
            xLarge
          </div>
          <div
            className="sc-fjtNA cAxyFs"
          >
            <div
              className=" css-elkbxv-placeholder"
              id="react-select-4-placeholder"
            >
              <div
                className="sc-jsnFHz jlZMwM"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-4-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-4-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-foGaCG"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bcgPVu kVpXlq"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-5-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-x13ut4-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-13urifb-ValueContainer"
        >
          <div
            className="sc-kvtFaN hHsmvS"
          >
            xLarge
          </div>
          <div
            className="sc-fjtNA cAxyFs"
          >
            <div
              className=" css-elkbxv-placeholder"
              id="react-select-5-placeholder"
            >
              <div
                className="sc-jsnFHz jlZMwM"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-5-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-5-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-foGaCG"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders single select 1`] = `
<div
  className="sc-eHKzgQ fkOcLC"
  dir="ltr"
  orientation="horizontal"
>
  <div
    className="sc-cVrJL irLGgW"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-2-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-b5xmou-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-kvtFaN hHsmvS"
          />
          <div
            className="sc-gPPVPr hmqyqw"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-2-placeholder"
            >
              <div
                className="sc-jsnFHz jlZMwM"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-2-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-2-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-foGaCG"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bcgPVu kVpXlq"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-3-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-x13ut4-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-kvtFaN hHsmvS"
          />
          <div
            className="sc-gPPVPr hmqyqw"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-3-placeholder"
            >
              <div
                className="sc-jsnFHz jlZMwM"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-3-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-3-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-foGaCG"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders single select RTL 1`] = `
<div
  className="sc-eHKzgQ fkOcLC"
  dir="rtl"
  orientation="horizontal"
>
  <div
    className="sc-cVrJL irLGgW"
  >
    <div
      className=" css-9ebu9r-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-8-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-x13ut4-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-kvtFaN hHsmvS"
          />
          <div
            className="sc-gPPVPr hmqyqw"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-8-placeholder"
            >
              <div
                className="sc-jsnFHz jlZMwM"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-8-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-8-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-foGaCG"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bcgPVu kVpXlq"
  >
    <div
      className=" css-9ebu9r-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-9-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-b5xmou-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-kvtFaN hHsmvS"
          >
            xLarge
          </div>
          <div
            className="sc-gPPVPr hmqyqw"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-9-placeholder"
            >
              <div
                className="sc-jsnFHz jlZMwM"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-9-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-9-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-foGaCG"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders single select vertical 1`] = `
<div
  className="sc-eHKzgQ iRsnoV"
  dir="ltr"
  orientation="vertical"
>
  <div
    className="sc-cVrJL irLGgW"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-6-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-1rambzq-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-kvtFaN hHsmvS"
          >
            xLarge
          </div>
          <div
            className="sc-gPPVPr hmqyqw"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-6-placeholder"
            >
              <div
                className="sc-jsnFHz jlZMwM"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-6-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-6-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-foGaCG"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bcgPVu kVpXlq"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-7-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-xt06d1-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-px9mr7-ValueContainer"
        >
          <div
            className="sc-kvtFaN hHsmvS"
          >
            xLarge
          </div>
          <div
            className="sc-gPPVPr hmqyqw"
          >
            <div
              className=" css-1rtvqhl-placeholder"
              id="react-select-7-placeholder"
            >
              <div
                className="sc-jsnFHz jlZMwM"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-7-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-7-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-foGaCG"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders sizes 1`] = `
<div
  className="flex flex-col justify-around items-center w-full gap-2"
>
  <div
    className="sc-jiPWxV dxESIR"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-dZiGjT hmAxjq"
    >
      <input
        className="sc-RYuTI eTufGE"
        dir="ltr"
        placeholder="Country"
        type="text"
      />
    </div>
    <div
      className="sc-dZiGjT ezhKNO"
    >
      <input
        className="sc-RYuTI dUPVZI"
        dir="ltr"
        placeholder="Phone"
        type="text"
      />
    </div>
  </div>
  <div
    className="sc-jiPWxV dxESIR"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-dZiGjT hmAxjq"
    >
      <input
        className="sc-RYuTI hWbAvT"
        dir="ltr"
        placeholder="Country"
        type="text"
      />
    </div>
    <div
      className="sc-dZiGjT ezhKNO"
    >
      <input
        className="sc-RYuTI ePAQDn"
        dir="ltr"
        placeholder="Phone"
        type="text"
      />
    </div>
  </div>
  <div
    className="sc-jiPWxV kPBiws"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-dZiGjT hmAxjq"
    >
      <div
        className="sc-iBBJcT bdOikL"
      >
        <input
          className="sc-RYuTI DNZoc"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-fHsjty cnpQxB"
        />
      </div>
    </div>
    <div
      className="sc-dZiGjT ezhKNO"
    >
      <div
        className="sc-iBBJcT bdOikL"
      >
        <input
          className="sc-RYuTI ldOhQs"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-fHsjty cnpQxB"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders vertical 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-jiPWxV uJznq"
    dir="ltr"
    orientation="vertical"
  >
    <div
      className="sc-dZiGjT jaVzgm"
    >
      <input
        className="sc-RYuTI iQVmTk"
        dir="ltr"
        placeholder="Country"
        type="text"
      />
    </div>
    <div
      className="sc-dZiGjT WdiBy"
    >
      <input
        className="sc-RYuTI eBEZpY"
        dir="ltr"
        placeholder="Phone"
        type="text"
      />
    </div>
  </div>
  <div
    className="sc-jiPWxV dMVQlb"
    dir="ltr"
    orientation="vertical"
  >
    <div
      className="sc-dZiGjT jaVzgm"
    >
      <div
        className="sc-iBBJcT bdOikL"
      >
        <input
          className="sc-RYuTI bZcTTw"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-fHsjty cnpQxB"
        />
      </div>
    </div>
    <div
      className="sc-dZiGjT WdiBy"
    >
      <div
        className="sc-iBBJcT bdOikL"
      >
        <input
          className="sc-RYuTI fCjXAY"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-fHsjty cnpQxB"
        />
      </div>
    </div>
  </div>
</div>
`;
